# geoarrow

./: README.md
data/: cities1000_50.txt
src/geoarrow/: CMakeLists.txt
src/geoarrow/geoarrow-shell/: CMakeLists.txt  geoarrow-shell.cpp  geoarrow-shell.h  record.cpp  record.h  record_filter.cpp  record_filter.h
